syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

enum L0ZappWidgetId {
  L0_ZAPP_WIDGET_ID_UNSPECIFIED = 0;
  L0_BREAKING_NEWS_TAGGED_ARTICLE_LN_V1 = 1;
  L0_TRENDZ_NEWS_HEADLINES_LN_V1 = 2;
  L0_TRENDZ_NEWS_ONE_WEATHER_XS_V1 = 3;
  L0_SPORTS_MATCH_XS_V1 = 4;
  L0_SPORTS_MATCH_LN_V1 = 5;
  L0_SPORTS_HEADLINES_LN_V1 = 6;
  L0_SPORTS_HEADLINES_MD_V1 = 7;
  L0_GAMES_RECENTLY_PLAYED_GAMES_LN_V1 = 8 [deprecated = true];
  L0_TRENDZ_NEWS_ROUNDUP_LN_V1 = 9;
  L0_TRENDZ_NEWS_ROUNDUP_MD_V1 = 10;
  L0_SPORTS_ROUNDUP_LN_V1 = 11;
  L0_SPORTS_ROUNDUP_MD_V1 = 12;
  L0_TRENDZ_NEWS_HEADLINES_MD_V1 = 13;
  L0_TRENDZ_NEWS_ONE_WEATHER_LN_V1 = 14;
  L0_TRENDZ_NEWS_HEADLINES_LN_V2 = 15;
  L0_SPORTS_NBA_HEADLINES_LN_V2 = 16;
  L0_SPORTS_NFL_HEADLINES_LN_V2 = 17;
  L0_SPORTS_NHL_HEADLINES_LN_V2 = 18;
  L0_SPORTS_MLB_HEADLINES_LN_V2 = 19;
  L0_TRENDZ_BREAKING_NEWS_MD_V1 = 20;
  L0_TRENDZ_BREAKING_NEWS_LN_V2 = 21;
  L0_GAMES_TOP_INSTANT_GAMES_LN_V1 = 22;
  L0_GAMES_TOP_THREE_GAMES_LN_V1 = 23;
  L0_GAMES_CONTINUE_PLAYING_GAMES_LN_V1 = 24;
  L0_GAMES_FEATURED_GAMES_LN_V1 = 25;
  L0_GAMES_LIVE_GAMES_LN_V1 = 26;
  L0_GAMES_NEW_ARRIVALS_GAMES_LN_V1 = 27;
  L0_GAMES_EDITORS_CHOICE_GAMES_LN_V1 = 28;
  L0_GAMES_COMMUNITY_GAMES_LN_V1 = 29;
  L0_SPORTS_NBA_HEADLINES_MD_V1 = 30;
  L0_SPORTS_NFL_HEADLINES_MD_V1 = 31;
  L0_SPORTS_NHL_HEADLINES_MD_V1 = 32;
  L0_SPORTS_MLB_HEADLINES_MD_V1 = 33;
  L0_ENTERTAINMENT_BUZZ_ENTERTAINMENT_LN_V1 = 34;
  L0_ENTERTAINMENT_BUZZ_ENTERTAINMENT_MD_V1 = 35;
  L0_ENTERTAINMENT_ARTICLES_ENTERTAINMENT_LN_V1 = 36;
  L0_ENTERTAINMENT_ARTICLES_ENTERTAINMENT_MD_V1 = 37;
}
